# aoc_2023

./: README.md  with.txt  without.txt
_build/: .db  .digest-db  log
_build/default/: aoc_2023.dune-package  aoc_2023.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: aoc.cmxa  aoc.ml  day_1.cmxa  parse.cmxa  parse.ml
_build/default/lib/.aoc.objs/byte/: aoc.cmi  aoc.cmti
_build/default/lib/.aoc.objs/native/: aoc.cmx
_build/default/lib/.day_1.objs/byte/: day_1.cmi  day_1.cmo  day_1.cmt
_build/default/lib/.day_1.objs/native/: day_1.cmx
_build/default/lib/.merlin-conf/: lib-aoc  lib-day_1  lib-parse
_build/default/lib/.parse.objs/byte/: parse.cmi  parse.cmo  parse.cmt
_build/default/lib/.parse.objs/native/: parse.cmx
_build/default/test/.merlin-conf/: exe-test_aoc_2023
_build/default/test/.test_aoc_2023.eobjs/byte/: dune__exe__Test_aoc_2023.cmi  dune__exe__Test_aoc_2023.cmti
_build/default/test/.test_aoc_2023.eobjs/native/: dune__exe__Test_aoc_2023.cmx
lib/: day_1.ml  day_10.ml  day_11.ml  day_12.ml  day_13.ml  day_14.ml  day_15.ml  day_16.ml  day_17.ml  day_18.ml  day_19.ml  day_2.ml  day_20.ml  day_21.ml  day_22.ml  day_23.ml  day_24.ml  day_25.ml  day_3.ml  day_4.ml  day_5.ml  day_6.ml  day_7.ml  day_8.ml  day_9.ml  day_X.ml  dune  parse.ml  utilities.ml
