(library
 (name parse)
 (modules parse)
 (libraries sexplib)
 (inline_tests
  (deps ../inputs/parse.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_1)
 (modules day_1)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_1.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_2)
 (modules day_2)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_2.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_3)
 (modules day_3)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_3.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_4)
 (modules day_4)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_4.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_5)
 (modules day_5)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_5.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))
