(library
 (name parse)
 (modules parse)
 (libraries sexplib)
 (inline_tests
  (deps ../inputs/parse.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name utilities)
 (modules utilities))
 ; (libraries sexplib)
 ; (inline_tests
 ;  (deps ../inputs/parse.txt))
 ; (preprocess
 ;  (pps ppx_inline_test ppx_assert)))

(library
 (name day_1)
 (modules day_1)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_1.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_2)
 (modules day_2)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_2.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_3)
 (modules day_3)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_3.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_4)
 (modules day_4)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_4.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_5)
 (modules day_5)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_5.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_6)
 (modules day_6)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_6.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_7)
 (modules day_7)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_7.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_8)
 (modules day_8)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_8.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_9)
 (modules day_9)
 (libraries parse str)
 (inline_tests
  (deps ../inputs/day_9.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_10)
 (modules day_10)
 (libraries parse str utilities)
 (inline_tests
  (deps ../inputs/day_10.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_11)
 (modules day_11)
 (libraries parse str utilities)
 (inline_tests
  (deps ../inputs/day_11.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))

(library
 (name day_12)
 (modules day_12)
 (libraries parse str utilities)
 (inline_tests
  (deps ../inputs/day_12.txt))
 (preprocess
  (pps ppx_inline_test ppx_assert)))
